--- a/resources/assets/sass/pages/welcome/index.scss
+++ b/resources/assets/sass/pages/welcome/index.scss
@@ -1,44 +1,41 @@
-
 $input: #5753db;
 
 body {
   background:#2f3134;
   float:left;
   position:relative;
-  // width:100%; height:100vh;
-  /*margin:3.2em 3.2em 0 0;*/
-  /*-webkit-border-radius: 12px;*/
-  /*-moz-border-radius: 12px;*/
-  /*border-radius: 12px;*/
   overflow: hidden;
-  font-family: 'Sans Serif';
+  font-family: 'Sans Serif', 'sans-serif';
 }
 ul {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
+}
+h2 {
+  margin: 0;
+  padding: 0;
+  font-size: 25px;
+  font-weight: bold;
+  color: #fff;
 }
 
 .layer_1 {
   position: absolute;
   width:116%;
-  /*height:px; */
   z-index:101;
-  /*display: block; */
-  /*overflow: hidden; */
   top: -190px;
 }
-.layer_2 { position: absolute; width:48px; height:48px; z-index:102; top: 50%; left: 50%;}
 
-h2 {
-  font-size: 25px;
-  font-weight: bold;
-  color: #fff;
-  // opacity: 1;
+.layer_2 {
+  position: absolute;
+  width:48px;
+  height:48px;
+  z-index:102;
+  top: 50%;
+  left: 50%;
 }
 
 label {
-  /*position: absolute;*/
-  /*z-index:102*/
   -webkit-perspective: 1000px;
   perspective: 1000px;
   -webkit-transform-style: preserve-3d;
@@ -51,7 +48,6 @@ label {
   top: 38%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  // cursor: pointer;
 }
 
 .card {
@@ -70,10 +66,8 @@ label {
   height: 100%;
   width: 100%;
   opacity: 0.75;
-  // background: #FFF;
   background: #222;
   text-align: center;
-  // line-height: 200px;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   border-radius: 10px;
@@ -86,12 +80,6 @@ label {
   transform: rotateX(180deg);
 }
 
-// label:hover .card {
-//     -webkit-transform: rotateX(20deg);
-//     transform: rotateX(20deg);
-//     box-shadow: 0 20px 20px rgba(50,50,50,.2);
-// }
-
 .main_input {
   display: none;
 }
@@ -99,16 +87,6 @@ label {
 .main_input:checked + .card {
   transform: rotateX(180deg);
   -webkit-transform: rotateX(180deg);
-}
-
-label:hover .main_input:checked + .card {
-  // transform: rotateX(160deg);
-  // -webkit-transform: rotateX(160deg);
-  // box-shadow: 0 20px 20px rgba(255,255,255,.2);
-}
-h2{
-  margin: 0;
-  padding: 0;
 }
 
 .nav_list {
@@ -119,20 +97,24 @@ h2{
   list-style: none;
   border-radius: 0 0 10px 10px;
   text-align: left;
+
+  li {
+    display: inline-block;
+    padding: 8px 17px;
+    border-right: 1px #fff solid;
+  }
+
+  a {
+    color: #fff;
+    display: block;
+    text-decoration: none;
+  }
+
+  li:last-child {
+    border: none;
+  }
 }
-.nav_list li {
-  display: inline-block;
-  padding: 8px 17px;
-  border-right: 1px #fff solid;
-}
-.nav_list a {
-  color: #fff;
-  display: block;
-  text-decoration: none;
-}
-.nav_list li:last-child {
-  border: none;
-}
+
 .profile-img {
   position: relative;
   left: 30%;
@@ -142,21 +124,26 @@ h2{
   border-radius: 50%;
   overflow: hidden;
   margin-bottom: 14px;
+
+  img {
+    width: 100%;
+  }
 }
-.profile-img img {
-  width: 100%;
-}
+
 .card .front p {
   color: #d8d8d8;
   font-size: 14px;
   margin-top: 3px;
 }
+
 .socials {
   margin-top: 20px;
+
   li {
     display: inline-block;
     padding-right: 12px;
   }
+
   i {
     color: $input;
     font-size: 2.3em;
